[package]
name = "do-you-really-want-to-procrastinate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
ansi_term = "0.12.1"
serde = { version = "1.0.136", features = ["serde_derive"] }
serde_json = "1.0.78"
ryu = "1.0.9"
